# RAG-App

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
api/: main.py  middleware.py  models.py  routes.py
core/: __init__.py  clients.py  config.py  logging.py
db/migrations/: 001_hybrid.sql
evals/: README.md  __init__.py  db.py  generation_eval.py  judge.py  metrics.py  prompts.py  report.py  retrieval_eval.py  run.py  variants.py
evals/datasets/: README.md  retrieval_qa.jsonl
evals/reports/official/: generation_official_20260717.json  retrieval_official_20260717.json  retrieval_official_20260717_hnsw.json
generation/: generator.py  prompts.py  query_rewriter.py
ingest/: chunker.py  embedder.py  loader.py  metadata.py  pdf_tables.py
retrieval/: reranker.py  retriever.py
tests/: conftest.py  test_api.py  test_chunker.py  test_config.py  test_generation_eval.py  test_generator.py  test_ingest.py  test_loader.py  test_metrics.py  test_middleware.py  test_query_rewriter.py  test_report.py  test_retriever.py  test_streaming.py
ui/: app.py
